# Monay

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  monay.spec  pyproject.toml
.claude/commands/: issue.md  pr.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/workflows/: build.yml  ci.yml  claude-code-review.yml
docs/: DEVELOPING.md  PLAN.md  RELEASING.md
monay/: __init__.py  __main__.py  bootstrap.py
monay/app/: __init__.py  clock.py  errors.py  services.py
monay/app/commands/: __init__.py  completion.py  handlers.py  parser.py  registry.py  specs.py
monay/data/: __init__.py  db.py  mappers.py  repositories.py  schema.py  unit_of_work.py
monay/data/migrations/: 0001_initial.py  __init__.py  m0001_initial.py  m0002_field_budget_pct.py
monay/domain/: __init__.py  closing.py  entities.py  errors.py  expressions.py  money.py  month.py  ports.py  values.py
monay/tui/: __init__.py  app.py  command_bar.py  format.py  theme.py
monay/tui/screens/: __init__.py  budget.py  docs.py  history.py  pockets.py  settings.py  transactions.py
monay/tui/widgets/: __init__.py  accordion.py  divider.py  income_detail.py  section_detail.py  section_list.py
tests/: conftest.py  fakes.py  test_budget_tab.py  test_closing.py  test_completion.py  test_container.py  test_expressions.py  test_field_pct_budgets.py  test_income_section.py  test_money.py  test_ports_fakes.py  test_recompute.py  test_repository_roundtrip.py  test_rollover_edges.py  test_routing.py  test_services_fake_uow.py  test_smoke.py  test_tabs.py  test_tax.py  test_tui_shell.py  test_values.py  test_version.py
tests/fixtures/: sample_budget.py
