[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "monay"
dynamic = ["version"] # derived from the git tag by hatch-vcs (see docs/RELEASING.md)
description = "A modern terminal budget app with monthly rollover logic."
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.7",
    "sqlalchemy>=2.0",
    "dependency-injector>=4.49",
]

[dependency-groups]
# Opt-in (not synced by default): packages the app into a standalone binary so
# end users run a single download with no Python/deps. Build per-OS (PyInstaller
# can't cross-compile): `uv run --group build pyinstaller ...`. Verified bundling
# textual + sqlalchemy + dependency-injector on 3.14. See docs/ARCHITECTURE.md §11.
build = [
    "pyinstaller>=6.20.0",
]
dev = [
    "pytest>=9",
    "openpyxl>=3.1", # only for the throwaway legacy_excel/ inspection scripts; app never imports Excel
]

# Not a distributable package (yet): uv just manages the environment.
# Flip to a packaged project (add a build backend + [project.scripts]) when the
# TUI entry point lands.
# Version comes from the git tag — no hand-maintained version string anywhere.
# hatch-vcs resolves it at build time and writes monay/_version.py (gitignored),
# which the frozen PyInstaller binary imports at runtime.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "monay/_version.py"

# Ship only the monay package; legacy_excel/ is private scratch, not part of it.
[tool.hatch.build.targets.wheel]
packages = ["monay"]

[tool.pytest.ini_options]
# Keep the project root on sys.path so `import monay` resolves the source tree.
# testpaths keeps collection to tests/.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
